ecmascript/parser/tests/test262-error-references/fail/d78bf1ca003a72cd.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/d78bf1ca003a72cd.js:1:4
  |
1 | 0o18
  |    ^

